--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 		"@types/graphql": "^0.13.3",
 		"@types/hapi": "^17.0.15",
 		"lerna": "^2.11.0",
+		"nodemon": "^1.17.5",
 		"tslint": "^5.10.0",
 		"typescript": "^2.9.2"
 	}
