--- a/packages/user/package.json
+++ b/packages/user/package.json
@@ -5,6 +5,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "start": "node ./dist/index.js",
+    "start:watch": "../../node_modules/.bin/nodemon ./dist/index.js",
     "compile": "tsc",
     "lint": "tslint ./src",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +18,7 @@
   "dependencies": {
     "apollo-server-hapi": "^1.3.6",
     "graphql": "^0.13.2",
+    "graphql-tools": "^3.0.5",
     "hapi": "^17.5.2"
   }
 }
