--- a/packages/blog/package.json
+++ b/packages/blog/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "user",
+  "name": "blog",
   "version": "1.0.0",
-  "description": "User GraphQL Server",
+  "description": "Blog GraphQL Server",
   "main": "./dist/index.js",
   "scripts": {
     "start": "node ./dist/index.js",
