--- a/packages/blog/package.json
+++ b/packages/blog/package.json
@@ -20,6 +20,7 @@
     "graphql": "^0.13.2",
     "graphql-tools": "^3.0.5",
     "hapi": "^17.5.2",
-    "node-fetch": "^2.1.2"
+    "node-fetch": "^2.1.2",
+    "schema": "^1.0.0"
   }
 }
