--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -20,7 +20,10 @@
     "graphql": "^0.13.2",
     "graphql-tools": "^3.0.5",
     "hapi": "^17.5.2",
-    "node-fetch": "^2.1.2",
-    "schema": "^1.0.0"
+    "node-fetch": "^2.1.2"
+  },
+  "devDependencies": {
+    "tslint": "^5.10.0",
+    "typescript": "^2.9.2"
   }
 }
