--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -10,5 +10,8 @@
     "GraphQL"
   ],
   "author": "Nick Nance",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "core": "^1.0.0"
+  }
 }
