--- a/packages/user/package.json
+++ b/packages/user/package.json
@@ -15,12 +15,11 @@
   "author": "Nick Nance",
   "license": "ISC",
   "dependencies": {
-    "apollo-link-http": "^1.5.4",
     "apollo-server-hapi": "^1.3.6",
+    "core": "^1.0.0",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.0.5",
     "hapi": "^17.5.2",
-    "node-fetch": "^2.1.2",
     "schema": "^1.0.0"
   },
   "devDependencies": {
