--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"devDependencies": {
 		"@types/graphql": "^0.13.3",
 		"@types/hapi": "^17.0.15",
+		"graphql": "^0.13.2",
 		"lerna": "^2.11.0"
 	},
 	"dependencies": {}
