--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "apollo-link-http": "^1.5.4",
-    "graphql": "^0.13.2",
     "graphql-tools": "^3.0.5",
     "node-fetch": "^2.1.2"
+  },
+  "peerDependencies": {
+    "graphql": "^0.13.2"
   },
   "typings": "dist/index.d.ts",
   "typescript": {
