--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -17,9 +17,11 @@
   "dependencies": {
     "apollo-server-hapi": "^1.3.6",
     "core": "^1.0.0",
-    "graphql": "^0.13.2",
     "graphql-tools": "^3.0.5",
     "hapi": "^17.5.2"
+  },
+  "peerDependencies": {
+    "graphql": "^0.13.2"
   },
   "devDependencies": {
     "tslint": "^5.10.0",
