--- a/packages/user/package.json
+++ b/packages/user/package.json
@@ -17,10 +17,12 @@
   "dependencies": {
     "apollo-server-hapi": "^1.3.6",
     "core": "^1.0.0",
-    "graphql": "^0.13.2",
     "graphql-tools": "^3.0.5",
     "hapi": "^17.5.2",
     "schema": "^1.0.0"
+  },
+  "peerDependencies": {
+    "graphql": "^0.13.2"
   },
   "devDependencies": {
     "tslint": "^5.10.0",
