--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -13,7 +13,9 @@
   ],
   "author": "Nick Nance",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "apollo-server": "^2.0.0-rc.5"
+  },
   "devDependencies": {
     "tslint": "^5.10.0",
     "typescript": "^2.9.2"
