--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -13,9 +13,7 @@
   ],
   "author": "Nick Nance",
   "license": "ISC",
-  "dependencies": {
-    "apollo-server": "^2.0.0-rc.5"
-  },
+  "dependencies": {},
   "devDependencies": {
     "tslint": "^5.10.0",
     "typescript": "^2.9.2"
