--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -15,10 +15,8 @@
   "author": "Nick Nance",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-hapi": "^1.3.6",
     "core": "^1.0.0",
-    "graphql-tools": "^3.0.5",
-    "hapi": "^17.5.2"
+    "graphql-tools": "^3.0.5"
   },
   "peerDependencies": {
     "graphql": "^0.13.2"
