--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -16,10 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "core": "^1.0.0",
+    "graphql": "^0.13.2",
     "graphql-tools": "^3.0.5"
-  },
-  "peerDependencies": {
-    "graphql": "^0.13.2"
   },
   "devDependencies": {
     "tslint": "^5.10.0",
