--- a/packages/user/package.json
+++ b/packages/user/package.json
@@ -16,11 +16,9 @@
   "license": "ISC",
   "dependencies": {
     "core": "^1.0.0",
+    "graphql": "^0.13.2",
     "graphql-tools": "^3.0.5",
     "schema": "^1.0.0"
-  },
-  "peerDependencies": {
-    "graphql": "^0.13.2"
   },
   "devDependencies": {
     "tslint": "^5.10.0",
