--- a/packages/blog/package.json
+++ b/packages/blog/package.json
@@ -15,6 +15,7 @@
   "author": "Nick Nance",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-hapi": "^1.4.0",
     "core": "^1.0.0",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.0.5",
