--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,12 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "apollo-link-http": "^1.5.4",
-    "apollo-server-hapi": "^1.4.0",
     "graphql-tools": "^3.0.5",
     "hapi": "^17.5.2",
     "node-fetch": "^2.1.2"
   },
   "peerDependencies": {
+    "apollo-server-hapi": "^1.4.0",
     "graphql": "^0.13.2"
   },
   "typings": "dist/index.d.ts",
@@ -25,6 +25,7 @@
     "definition": "dist/index.d.ts"
   },
   "devDependencies": {
+    "@types/hapi": "^17.0.15",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2"
   }
