--- a/package.json
+++ b/package.json
@@ -1,14 +1,40 @@
 {
-	"scripts": {
-		"postinstall": "lerna bootstrap",
-		"clean": "lerna clean",
-		"compile": "lerna run compile"
-	},
-	"devDependencies": {
-		"@types/graphql": "^0.13.3",
-		"@types/hapi": "^17.0.15",
-		"graphql": "^0.13.2",
-		"lerna": "^2.11.0"
-	},
-	"dependencies": {}
+  "name": "graphql-gateway",
+  "version": "1.0.0",
+  "description": "Example GraphQL Gateway Project",
+  "main": "./dist/gateway/index.js",
+  "scripts": {
+    "start": "node ./dist/gateway/index.js",
+    "start:blog": "node ./dist/blog/index.js",
+    "start:user": "node ./dist/user/index.js",
+    "compile": "tsc",
+    "lint": "tslint ./src",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nnance/graphql-gateway.git"
+  },
+  "keywords": [
+    "GraphQL"
+  ],
+  "author": "Nick Nance",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/nnance/graphql-gateway/issues"
+  },
+  "homepage": "https://github.com/nnance/graphql-gateway#readme",
+  "devDependencies": {
+    "@types/hapi": "^17.0.15",
+    "tslint": "^5.11.0",
+    "typescript": "^2.9.2"
+  },
+  "dependencies": {
+    "apollo-link-http": "^1.5.4",
+    "apollo-server-hapi": "^1.4.0",
+    "graphql": "^0.13.2",
+    "graphql-tools": "^3.0.5",
+    "hapi": "^17.5.2",
+    "node-fetch": "^2.2.0"
+  }
 }
