--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "graphql": "^0.13.2",
     "graphql-tools": "^3.0.5",
     "hapi": "^17.5.2",
-    "node-fetch": "^2.2.0"
+    "node-fetch": "^2.2.0",
+    "zipkin": "^0.14.0"
   }
 }
