--- a/package.json
+++ b/package.json
@@ -34,12 +34,16 @@
     "typescript": "^2.9.2"
   },
   "dependencies": {
+    "apollo-link": "^1.2.2",
+    "apollo-link-context": "^1.0.8",
     "apollo-link-http": "^1.5.4",
     "apollo-server-hapi": "^1.4.0",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.0.5",
     "hapi": "^17.5.2",
     "node-fetch": "^2.2.0",
-    "zipkin": "^0.14.0"
+    "zipkin": "^0.14.0",
+    "zipkin-instrumentation-fetch": "^0.14.0",
+    "zipkin-transport-http": "^0.14.0"
   }
 }
