--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/nnance/graphql-gateway#readme",
   "devDependencies": {
+    "@types/boom": "^7.2.0",
     "@types/hapi": "^17.0.15",
     "nodemon": "^1.18.3",
     "tslint": "^5.11.0",
@@ -38,10 +39,12 @@
     "apollo-link-context": "^1.0.8",
     "apollo-link-http": "^1.5.4",
     "apollo-server-hapi": "^1.4.0",
+    "boom": "^7.2.0",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.0.5",
     "hapi": "^17.5.2",
     "node-fetch": "^2.2.0",
+    "prom-client": "^11.1.1",
     "zipkin": "^0.14.0",
     "zipkin-instrumentation-fetch": "^0.14.0",
     "zipkin-transport-http": "^0.14.0"
