--- a/prometheus.yml
+++ b/prometheus.yml
@@ -6,7 +6,10 @@ global:
 scrape_configs:
     - job_name: 'prometheus'
       static_configs:
-          - targets: ['localhost:9090']
+        - targets: ['localhost:9090']
     - job_name: 'node-exporter'
       static_configs:
-          - targets: ['node-exporter:9100']
+        - targets: ['node-exporter:9100']
+    - job_name: 'gateway'
+      static_configs:
+        - targets: ['gateway:3000']
