--- a/prometheus.yml
+++ b/prometheus.yml
@@ -13,3 +13,9 @@ scrape_configs:
     - job_name: 'gateway'
       static_configs:
         - targets: ['gateway:3000']
+    - job_name: 'blog'
+      static_configs:
+        - targets: ['blog:3010']
+    - job_name: 'user'
+      static_configs:
+        - targets: ['user:3011']
