--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/nnance/graphql-gateway#readme",
   "devDependencies": {
     "@types/boom": "^7.2.0",
+    "@types/consul": "^0.23.32",
     "@types/hapi": "^17.0.15",
     "nodemon": "^1.18.3",
     "tslint": "^5.11.0",
@@ -40,6 +41,7 @@
     "apollo-link-http": "^1.5.4",
     "apollo-server-hapi": "^1.4.0",
     "boom": "^7.2.0",
+    "consul": "^0.34.0",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.0.5",
     "hapi": "^17.5.2",
